src/scss/ia/_pipeline.scss
.wrap-pipeline {
    /* Make the fonts look snazzy. */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    padding: 0 2em;
}

.hide { display: none; }

.toggle-details { margin-right: 2em; }

.filter-team span, #pipeline-clear-filters { margin-left: 1em; }

.deselect-all .ddgsi-close { cursor: pointer; }

#pipeline-stats {
    text-align: center;
    margin-top: -1em;

    #created-stats { 
        font-weight: 600; 
        margin-bottom: 2em;
    }

    h1 { 
        margin-bottom: 0.3em;
        margin-top: 0;
    }
}

#dev_pipeline { margin-top: 1em; }

#dev_pipeline .dev_pipeline-column {
    text-align: left;
    border-radius: 3px;

    .dev_pipeline-column--container {
	padding: 1em;
	background-color: $silver;
    }

    .item-activity { 
        color: $grey-dark; 
    }

    .item-activity, .activity-details {
        a { color: $blue; }
    }

    .activity-details {
        font-size: 0.75em;
        margin-left: 2.3em;
    }

    .icon-circle {
        color: $red;
    }

    .icon-bubbles {
        color: $grey-light;
    }

    .icon {
        margin-right: 0.5em;
    }

    .dev_pipeline-column__title {
	font-size: 1em;
	font-weight: 600;
	color: $slate-light;
    }
}

.dev_pipeline-column__list {
    margin-bottom: 0;

    li {
        list-style: none;
        padding: 0.3em 0;
        font-size: 1em;
	background-color: white;
	margin-bottom: 0.5em;
	border-radius: 3px;
	padding: 0.5em;

        a { 
	    color: black; 
	}

        .item-name { 
	    max-width: 80%; 
	    
	    /* Display the type of repo */
	    &:before {
		display: inline;
		color: $grey;
		content: "N";
		font-weight: 500;
		padding: 0 0.3em 0 0.2em;
	    }

	    /* Change content to match the repo. */
	    &.pipeline__stamp {
		&-spice:before {
		    content: "S";
		}

		&-goodies:before {
		    content: "G";
		}

		&-fathead {
		    content: "F";
		}

		&-longtail {
		    content: "L";
		}
	    }
	}

        .icon-check, .icon-check-empty {
            margin: 0.25em 0.6em 0 0;
        }

	&:last-child {
	    margin-bottom: 0;
	}
    }

    .ia-item--stamp {
        width: 20px;
        height: 20px;
        position: inherit;
        font-size: 0.8em;
        margin-right: 0.6em;
    }
}

.pipeline-actions { 
    margin-left: 2em;
}

#pipeline-action-submit, #pipeline-clear-filters {
    height: 1.6em;
    padding-top: 0;
    padding-bottom: 0.27em;
}

